Added Icon, improved login form

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,7 @@
 // Base
 @import 'base/_typography';
 @import 'base/_main';
+@import 'base/_animations';
 
 // Components
 @import 'components/_accessForm.scss';
