Added settings menu 🚅

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,3 +6,5 @@
 // Components
 @import 'components/_accessForm.scss';
 @import 'components/_bucketSelector.scss';
+@import 'components/_permissionsDialog.scss';
+@import 'components/_statusMenu.scss';
