--- a/app/styles/components/_accessForm.scss
+++ b/app/styles/components/_accessForm.scss
@@ -1,3 +1,5 @@
+@import '../base/_main.scss';
+
 .access-form-container {
   display: flex;
   flex-direction: column;
@@ -16,10 +18,19 @@
 
     input {
       width: 200px;
+      border-width: 0 0 1px 0;
     }
 
     #submitButton {
-      margin-top: 5px;
+      margin-top: 10px;
+      border-radius: 50px;
+      font-family: "Montserrat", sans-serif;
+      font-size: 1.2em;
+      font-weight: 700;
+      padding: 10px 40px 10px 40px;
+      border: none;
+      background-color: $green-color;
+      color: $white-color;
     }
   }
 }
