--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,6 +5,5 @@
 
 // Components
 @import 'components/_accessForm.scss';
-@import 'components/_bucketSelector.scss';
-@import 'components/_permissionsDialog.scss';
+@import 'components/settingsMenu';
 @import 'components/_statusMenu.scss';
